# CodeChronometer

./: CMakeLists.txt  README.md  main.c  statistics.c
.github/workflows/: cmake-single-platform.yml
include/: code_count.h  student_management.h  typewriter.h
modules/: code_count.c  student_management.c
scripts/: count.py  test.py
src/: code_count.c  code_count.h  main.c  student_management.c  typewriter.c  utils.c  utils.h
